          and analyzed by Aivars Kalvans).
        - improve header file compatibility of the standalone eventfd code
          in an obscure case.
        - implement EV_AVOID_STDIO option.
        - do not use sscanf to parse linux version number (smaller, faster,
          no sscanf dependency).
        - new EV_CHILD_ENABLE and EV_SIGNAL_ENABLE configurable settings.
        - add section on accept() problems to the manpage.

3.9  Thu Dec 31 07:59:59 CET 2009
	- signalfd is no longer used by default and has to be requested
          explicitly - this means that easy to catch bugs become hard to
          catch race conditions, but the users have spoken.
        - point out the unspecified signal mask in the documentation, and
          that this is a race condition regardless of EV_SIGNALFD.
	- backport inotify code to C89.
        - inotify file descriptors could leak into child processes.
        - ev_stat watchers could keep an errornous extra ref on the loop,
          preventing exit when unregistering all watchers (testcases
          provided by ry@tinyclouds.org).
        - implement EV_WIN32_HANDLE_TO_FD and EV_WIN32_CLOSE_FD configuration
          symbols to make it easier for apps to do their own fd management.
        - support EV_IDLE_ENABLE being disabled in ev++.h
          (patch by Didier Spezia).
        - take advantage of inotify_init1, if available, to set cloexec/nonblock
          on fd creation, to avoid races.
        - the signal handling pipe wasn't always initialised under windows
          (analysed by lekma).
        - changed minimum glibc requirement from glibc 2.9 to 2.7, for
          signalfd.
        - add missing string.h include (Denis F. Latypoff).
        - only replace ev_stat.prev when we detect an actual difference,
          so prev is (almost) always different to attr. this might
          have caused the probems with 04_stat.t.
        - add ev::timer->remaining () method to C++ API.
