@@ -17,6 +17,7 @@ TODO: ABI??? API????? Changes???
         - do not use sscanf to parse linux version number (smaller, faster,
           no sscanf dependency).
         - new EV_CHILD_ENABLE and EV_SIGNAL_ENABLE configurable settings.
+        - update libev.m4 HAVE_CLOCK_SYSCALL test for newwer glibcs.
         - add section on accept() problems to the manpage.
 
 3.9  Thu Dec 31 07:59:59 CET 2009
